Implement ValueGetter system